test/src/e2e_vm_tests/test_programs/should_fail/illegal_break/src/main.sw
script;

fn main() {
    break;
    while true {
    }
}
